# brf2ebrl

./: .gitignore  README.md  pyproject.toml
docs/: plugin_development_guide.md
plugins/brf2ebrl_bana/: pyproject.toml
plugins/brf2ebrl_bana/src/brf2ebrl_bana/: __init__.py
plugins/brf2ebrl_nfb/: pyproject.toml
plugins/brf2ebrl_nfb/src/brf2ebrl_nfb/: __init__.py
src/brf2ebrf/: __init__.py  common_detectors.py  common_selectors.py  main.py  normalise.py  parser.py  utils.py
src/brf2ebrf/bana/: __init__.py  block_detectors.py  pages.py  tn_detectors.py
src/brf2ebrf/common/: __init__.py  block_detectors.py  box_line_detectors.py  detectors.py  emphasis_detectors.py  graphic_detectors.py  page_numbers.py  selectors.py
src/brf2ebrf/scripts/: __init__.py  brf2ebrf.py  brf2unicode.py
src/brf2ebrf_bana/: __init__.py  tn_detectors.py
src/brf2ebrl/: __init__.py  parser.py  plugin.py
src/brf2ebrl/common/: block_detectors.py  box_line_detectors.py  detectors.py  emphasis_detectors.py  graphic_detectors.py  page_numbers.py  selectors.py
src/brf2ebrl/ebrl/static/ebraille/css/: default.css
src/brf2ebrl/scripts/: brf2ebrl.py  brf2unicode.py
src/brf2ebrl/utils/: __init__.py  ebrl.py  metadata.py  opf.py
src/brf2ebrl_bana/: __init__.py  pages.py  tn_detectors.py
src/brf2ebrl_nfb/: __init__.py
tests/: test_basic.py  test_convert_ascii_to_unicode_braille.py  test_convert_blank_line_to_pi.py  test_convert_box_line_to_div.py  test_convert_unknown_to_pre.py  test_detect_and_pass_XML.py  test_detect_centered_heading.py  test_detect_level_five_heading.py  test_detect_level_seven_heading.py  test_detect_paragraph.py  test_detect_processing_instruction.py  test_emphasis_detectors.py  test_graphic_detectors_layout_matching.py  test_most_confident_detector.py  test_normalise.py  test_page_numbers.py  test_parser.py
tests/bana/: test_braille_page_detector.py  test_page_detector.py  test_page_number_positions.py
