[tool.pdm.scripts]
test = "pytest"
[dependency-groups]
test = [
    "pytest>=7.3.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = ["tests",]
[project]
name = "brf2ebrl"
version = "0.1.0"
description = "A tool for converting BRF to eBRL."
authors = [
    {name = "Michael Whapples", email = "mwhapples@aph.org"},
    {name = "Ken Perry", email = "kperry@aph.org"},
]
dependencies = [
    "regex>=2024.11.6",
        "pdfplumber",
    "pypdf>=5.3.0",
    "lxml>=6.0.0",
    "html5lib>=1.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MPL-2.0"}

[project.entry-points.'brf2ebrl.plugins']
bana = "brf2ebrl_bana:PLUGIN"
nfb = "brf2ebrl_nfb:PLUGIN"

[project.scripts]
brf2unicode = "brf2ebrl.scripts.brf2unicode:main"
brf2ebrl = "brf2ebrl.scripts.brf2ebrl:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
